# elite_deck

./: .gitignore  README.md  Taskfile.yml  config.example.toml  pyproject.toml
src/back/: __init__.py  __main__.py  app.py  config.py
src/back/core/: flags.py  models.py  store.py
src/back/ingest/: watcher.py
src/back/integrations/: base.py  edsm.py  fdevids.py
src/back/macros/: capture.py  engine.py  registry.py  store.py
src/back/server/: app.py
src/elite_deck/: __main__.py  app.py
src/elite_deck/core/: models.py  store.py
src/elite_deck/ingest/: watcher.py
src/elite_deck/integrations/: base.py  edsm.py  fdevids.py
src/elite_deck/macros/: __init__.py  capture.py  engine.py  keyspec.py  registry.py  store.py
src/elite_deck/server/: app.py
src/elite_deck/web/: index.html
src/front/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/front/src/: App.vue  elite-deck.css  main.ts  types.ts
src/front/src/components/: KeybindModal.vue  MacroButton.vue  PipBar.vue
src/front/src/composables/: useWebSocket.ts
src/front/src/stores/: game.ts
src/front/src/views/: CombatView.vue  DeckView.vue  TelemetryView.vue
tests/: test_combats.py  test_config.py  test_macros.py  test_store.py
