[project]
name = "elite-deck"
version = "0.1.0"
description = "Terminal second écran + macros pour Elite Dangerous (affichage tablette via WebSocket)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Elite Deck" }]
keywords = ["elite-dangerous", "second-screen", "macros", "websocket"]

dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# Backend d'envoi de touches : requis uniquement sur le PC qui fait tourner le jeu.
macros = [
    "pynput>=1.7",
]
# Intégrations externes (anticipées, non activées par défaut).
# aiohttp (déjà en core) suffit pour EDSM ; FDevIDs n'a pas de dépendance.
integrations = []
# Outils de développement.
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
elite-deck = "elite_deck.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elite_deck"]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["elite_deck"]

# ── Mypy (typage strict) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pynput.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
